test_suite/tests/ui/fail/invalid_attr_value_for_subcommand/invalid_subcommand_name.rs
use clapi::macros::*;

#[command]
fn app(){
    #[subcommand(name=123)]
    fn child(){}
}

fn main(){}